traefik/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx # Name of the deployment
  namespace: nginx-test # Name of the namespace
  labels:
    app: nginx # Name of your application
spec:
  selector:
    matchLabels:
      app: nginx # Name of your application
  replicas: 1 # Number of replicas
  template:
    metadata:
      labels:
        app: nginx # Name of your application
    spec:
      containers:
      # Containers are the individual pieces of your application that you want
      # to run.
      - name: nginx # Name of the container
        image: nginx:latest # The image you want to run
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        #   requests:
        resources:
          limits:
            memory: 256Mi
            cpu: "0.2"
        ports:
        # Ports are the ports that your application uses.
        - containerPort: 80 # The port that your application uses
---
 
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  namespace: nginx-test
spec:
  selector:
    app:  nginx
  # ---
  type:  ClusterIP
  ports:
  - name:  http
    port:  80

---
 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx # Name of the ingress object
  namespace: nginx-test # Name of the namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: "nginx.deepthot.org"  # Your hostname
    http:
      paths:
      # Path-based routing settings:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx  # The name of the service
            port:
              number: 80  # Service Portnumber
